[package]
name = "xenforeignmemory-sys"
version = "0.1.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
links = "xenforeignmemory"
repository = "https://github.com/Wenzel/xenforeignmemory-sys"
readme = "README.md"
keywords = ["xen"]
description = "Rust bindings for xenforeignmemory library"
license = "GPL-3.0-only"

[dependencies]

[build-dependencies]
bindgen = "0.51.1"
