[package]
name = "xenforeignmemory-sys"
version = "0.2.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Rust FFI bindings for libxenforeignmemory"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenforeignmemory-sys"
repository = "https://github.com/Wenzel/xenforeignmemory-sys"
license = "GPL-3.0-only"
keywords = ["xen", "xenforeignmemory"]
categories = ["external-ffi-bindings"]
links = "xenforeignmemory"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
